--- a/scripts/converter.env
+++ b/scripts/converter.env
@@ -1,12 +1,13 @@
 CONVERTER_LOG_LEVEL=error
 
+#CONVERTER_MONGO_DSN="mongodb://root:#EDC5tgb@192.168.10.11:27017/armv-main?authSource=admin&authMechanism=MONGODB-CR"
+
 CONVERTER_MONGO_DSN=mongodb://localhost:27017/armv-main
 CONVERTER_MONGO_DB=armv-main
 
-CONVERTER_WORKERS=1
+CONVERTER_WORKERS=8
 
-CONVERTER_REGISTRY=/Users/alexis/workspace/rtlabs/data/registry2.xlsx
+CONVERTER_REGISTRY=/Users/alexis/workspace/rtlabs/sdf-converter/data/registry1.xlsx
 CONVERTER_DIR_TEMPLATE=/Users/alexis/workspace/rtlabs/sdf-converter/template
-CONVERTER_DIR_ARTEFACT=/Users/alexis/workspace/rtlabs/data/artefact2
-CONVERTER_DIR_TMP=/Users/alexis/workspace/rtlabs/data/tmp
-
+CONVERTER_DIR_ARTEFACT=/Users/alexis/workspace/rtlabs/sdf-converter/data/regional
+CONVERTER_DIR_TMP=/Users/alexis/workspace/rtlabs/sdf-converter/data/tmp
